@@ -829,7 +829,12 @@ b.conum * { color: inherit !important; }
 </div>
 <div class="paragraph">
 <p>This is the release notes for version 3.1.80-6.
-Multiple bugs has been reported and fixed.</p>
+Multiple bugs has been reported and fixed.
+If you want to update from a version prior to 3.1.80-6, please download and
+execute first this script in the node where you will make the cluster update process:</p>
+</div>
+<div class="paragraph">
+<p><a href="http://repo.redborder.com/utils/rb_preupdate_80-6.sh" class="bare">http://repo.redborder.com/utils/rb_preupdate_80-6.sh</a></p>
 </div>
 <div class="sect2">
 <h3 id="_whats_new">What&#8217;s new</h3>
